<resources>
    <string name="app_name">Cursando</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Logar</string>
    <string name="welcome">"Bem vindo !"</string>
    <string name="invalid_username">Email inválido</string>
    <string name="invalid_password">A senha deve ter mais de 3 caracteres</string>
    <string name="login_failed">"Login falhou"</string>
    <string name="forgot_password">"Esqueceu sua conta?"</string>
</resources>
